[gd_scene format=3 uid="uid://dm45akoq5wsk3"]

[ext_resource type="Script" uid="uid://gkbs62a7jakk" path="res://MainScene.gd" id="1_vxoxk"]
[ext_resource type="Script" uid="uid://cn5hcfqhfccku" path="res://Player.gd" id="2_weyrh"]
[ext_resource type="Script" uid="uid://xa8gxqhy8gkd" path="res://CommandProcessor.gd" id="3_4s3ea"]
[ext_resource type="Script" uid="uid://c0esgfnrng5x2" path="res://rooms/RoomManager.gd" id="4_als22"]
[ext_resource type="PackedScene" uid="uid://onchyq3l7cgs" path="res://rooms/Room.tscn" id="5_vs1j2"]
[ext_resource type="PackedScene" uid="uid://bwt3m8uhloc4y" path="res://OutputUI.tscn" id="6_gm0c2"]
[ext_resource type="FontFile" uid="uid://wgide8wptse" path="res://fonts/IBMPlexMono-Regular.ttf" id="7_5makc"]
[ext_resource type="Script" uid="uid://bg545ebsmcn4l" path="res://input/Input.gd" id="8_x1j8v"]
[ext_resource type="PackedScene" uid="uid://oapchy25kr5j" path="res://SidePanel.tscn" id="9_5ng8r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wv30w"]
bg_color = Color(0.0415072, 0.0415072, 0.0415072, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w7s2a"]
bg_color = Color(0.265361, 0.265361, 0.26536, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2xcrq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5qwnq"]

[node name="MainScene" type="Control" unique_id=917469029]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_right = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vxoxk")
intro_text = "Out of nowhere, you appear in a pitch-black room, only illuminated in certain areas by faint red glows of undeterminable origin. The air reeks of death, and no sound can be heard. You have no recollection of anything about yourself nor of your coming here. What you do know, however, is that this place gives you the creeps.

As soon as you begin to look around, a booming voice echoes from inside your skull: "
devil_intro_text = "Welcome to the place of your demise. There is no escape from this place: only death awaits you here. Yet, if you so please, take a gander at my chalices in the other room! And feel free to have a sip.

I will be watching from above, so don't try anything stupid."

[node name="Player" type="Node" parent="." unique_id=1232165401]
unique_name_in_owner = true
script = ExtResource("2_weyrh")

[node name="CommandProcessor" type="Node" parent="." unique_id=1287049742]
unique_name_in_owner = true
script = ExtResource("3_4s3ea")

[node name="RoomManager" type="Node" parent="." unique_id=984031575]
unique_name_in_owner = true
script = ExtResource("4_als22")

[node name="Entrance" parent="RoomManager" unique_id=1197468203 instance=ExtResource("5_vs1j2")]
offset_left = 646.0
offset_top = -941.0
offset_right = 1030.0
offset_bottom = -649.0
room_name = "the Entrance"
room_description = "the place in which you were summoned."

[node name="Library" parent="RoomManager" unique_id=1651662790 instance=ExtResource("5_vs1j2")]
offset_left = 649.0
offset_top = -1263.0
offset_right = 1033.0
offset_bottom = -971.0
room_name = "the Library"
room_description = "a dusty and abnormally well-lit room, adorned with vast shelves of ancient-looking books. You get the feeling that this place has the answers to all of your questions..."

[node name="Chalices" parent="RoomManager" unique_id=460338749 instance=ExtResource("5_vs1j2")]
offset_left = 1053.0
offset_top = -936.0
offset_right = 1437.0
offset_bottom = -644.0
room_name = "the Chalices"
room_description = "one of the few illuminated areas in this dark void. Visible to you is a pedestal solely intended to house five chalices of varying liquids."

[node name="Bodies" parent="RoomManager" unique_id=1283748211 instance=ExtResource("5_vs1j2")]
offset_left = 238.0
offset_top = -940.0
offset_right = 622.0
offset_bottom = -648.0
room_name = "the Bodies"
room_description = "one of the few illuminated areas in this dark void. Visible to you is an array of three human corpses, each bearing a weapon of sorts. "

[node name="Background" type="PanelContainer" parent="." unique_id=910945927]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wv30w")

[node name="MarginContainer" type="MarginContainer" parent="Background" unique_id=57587668]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Columns" type="HBoxContainer" parent="Background/MarginContainer" unique_id=54105919]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Rows" type="VBoxContainer" parent="Background/MarginContainer/Columns" unique_id=1032780565]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="OutputPanel" type="PanelContainer" parent="Background/MarginContainer/Columns/Rows" unique_id=1508903306]
layout_mode = 2
size_flags_vertical = 3

[node name="OutputUI" parent="Background/MarginContainer/Columns/Rows/OutputPanel" unique_id=1417187846 instance=ExtResource("6_gm0c2")]
layout_mode = 2
max_lines_remembered = -1

[node name="InputArea" type="PanelContainer" parent="Background/MarginContainer/Columns/Rows" unique_id=671755812]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_w7s2a")

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer/Columns/Rows/InputArea" unique_id=960728989]
layout_mode = 2

[node name="Prompt" type="Label" parent="Background/MarginContainer/Columns/Rows/InputArea/HBoxContainer" unique_id=313049752]
layout_mode = 2
theme_override_fonts/font = ExtResource("7_5makc")
theme_override_font_sizes/font_size = 28
text = " > "

[node name="Input" type="LineEdit" parent="Background/MarginContainer/Columns/Rows/InputArea/HBoxContainer" unique_id=1710385962]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("7_5makc")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxEmpty_2xcrq")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5qwnq")
max_length = 48
keep_editing_on_text_submit = true
script = ExtResource("8_x1j8v")

[node name="SidePanel" parent="Background/MarginContainer/Columns" unique_id=590520307 instance=ExtResource("9_5ng8r")]
layout_mode = 2

[connection signal="text_submitted" from="Background/MarginContainer/Columns/Rows/InputArea/HBoxContainer/Input" to="." method="_on_input_text_submitted"]
[connection signal="text_submitted" from="Background/MarginContainer/Columns/Rows/InputArea/HBoxContainer/Input" to="Background/MarginContainer/Columns/Rows/InputArea/HBoxContainer/Input" method="_on_text_submitted"]
